<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clientes"
            android:icon="@mipmap/ic_menu_friendslist"
            android:title="@string/nav_menu_clientes" />
        <item
            android:id="@+id/nav_new_order"
            android:icon="@mipmap/ic_menu_week"
            android:title="@string/nav_menu_new_order" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@mipmap/ic_menu_refresh"
            android:title="@string/nav_menu_sync" />

        <item
            android:id="@+id/nav_export"
            android:icon="@mipmap/ic_menu_upload"
            android:title="@string/nav_menu_exportar" />
    </group>

</menu>
