<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.NewClientActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_name_clients"
        android:id="@+id/lblClientActivityTitle"
        android:layout_centerHorizontal="true" />

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_client_lbl_first_name"
            android:id="@+id/lblClientFirstName"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:maxLength="45"
            android:id="@+id/txtClientFirstName" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_client_lbl_last_name"
            android:id="@+id/lblClientLastName"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:maxLength="45"
            android:id="@+id/txtClientLastName" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_client_lbl_address"
            android:id="@+id/lblClientAddress"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:maxLength="80"
            android:id="@+id/txtClientAddress" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_client_lbl_ruc"
            android:id="@+id/lblClientRuc"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="11"
            android:id="@+id/txtClientRuc" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_client_lbl_dni"
            android:id="@+id/lblClientDni"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="8"
            android:id="@+id/txtClientDni" />
    </TableRow>

    <TableRow>
        <Button
            android:layout_span="2"
            android:id="@+id/btnSaveClient"
            android:text="@string/activity_client_btn_save"/>
    </TableRow>

</TableLayout>
